tests/ui/indexing/ambiguity-after-deref-step.stderr
error[E0282]: type annotations needed for `&_`
  --> $DIR/ambiguity-after-deref-step.rs:5:9
   |
LL |     let x = &Default::default();
   |         ^
LL |
LL |     x[1];
   |     - type must be known at this point
   |
help: consider giving `x` an explicit type, where the placeholders `_` are specified
   |
LL |     let x: &_ = &Default::default();
   |          ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
